--- a/.github/workflow/multipleJobs.yaml
+++ b/.github/workflow/multipleJobs.yaml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   job1:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -12,13 +12,13 @@ jobs:
         run: echo "Hello World"
 
   job2:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: Print Job2
         run: echo "This is job 2"
 
   job3:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: Print job3
         run: echo "This is job3"
