--- a/.github/workflows/multipleJobs.yml
+++ b/.github/workflows/multipleJobs.yml
@@ -20,7 +20,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [test, build]
     steps:
       - name: Print job3
         run: echo "This is job3"
